<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerwelcom"
    android:layout_width="fill_parent"
    android:layout_height="80sp"
    android:orientation="horizontal"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/border_bottom_header" >

    <LinearLayout
        android:layout_width="80sp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/logo" >

        <!-- <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" /> -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_marginBottom="0dip"
            android:text="@string/nimero_sim"
            android:textColor="#ffffff"
            android:textSize="24sp" />
		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="37dp"
            android:gravity="right"
            android:orientation="horizontal" >

			<TextView
			    android:id="@+id/txtVpoint"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="5dp"
			    android:text="@string/point"
			    android:textColor="#663300"
			    android:textSize="18sp" />
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="37dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txtVTelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/nat_tel"
                android:padding="5dp"
                android:text="@string/telheader"
                android:textColor="#663300"
                android:textSize="18sp" />
            
        </LinearLayout>
		<ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_natcom"
            android:src="@drawable/logo_nat"
            android:visibility="gone"
             />
        

    </LinearLayout>

</LinearLayout>