<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#AFA7EF"
        android:gravity="center" >

        <include
            android:id="@+id/cell1"
            layout="@layout/headerwelcom" />
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#6AED83"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- Scrollable Content below header and above footer -->

    <ScrollView
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_alignParentRight="true"
        android:layout_below="@id/header"
        android:background="#ffffff" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvinfo2"
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/profilmsg"
                android:textColor="@color/orange02"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="80dp"
                    android:background="@drawable/border_bottom_header"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="71dp"
                        android:layout_height="71dp"
                        android:contentDescription="@string/profilDesc"
                        android:src="@drawable/user" />
                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_orange_style"
                    android:text="@string/btnProfilPhoto"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvnon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/nonprofil"
                    android:textColor="@color/orange02"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/ediNom"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextstyleorange"
                    android:gravity="center"
                    android:inputType="text"
                    android:textSize="20sp" >
                </EditText>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgOne"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal" >

                

                <RadioButton
                    android:id="@+id/rbtn_homme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:textColor="@color/orange02"
                    android:textSize="12sp"
                    android:text="@string/sexe_homme" />

                

                <RadioButton
                    android:id="@+id/rbtn_femme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:textColor="@color/orange02"
                    android:textSize="12sp"
                    android:text="@string/sexe_femme" />
            </RadioGroup>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvnaiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="dat ou fet"
                    android:textColor="@color/orange02"
                    android:textSize="12sp" />

                <DatePicker
                    android:id="@+id/datePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
			
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvzone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/zoneprofil"
                    android:textColor="@color/orange02"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editZone"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextstyleorange"
                    android:gravity="center"
                    android:inputType="text"
                    android:textSize="20sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvpin"
                    android:layout_width="120dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/pinprofil"
                    android:textColor="@color/orange02"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editPin"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextstyleorange"
                    android:gravity="center"
                    android:inputType="text"
                    android:textSize="20sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/creerProfil"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_orange_style"
                    android:text="@string/btncreerprofil"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>